--- a/Efective_Java/1장_들어가기/1_들어가기.md
+++ b/Efective_Java/1장_들어가기/1_들어가기.md
@@ -1,4 +1,4 @@
-### 들어가기
+## 1. 들어가기
 
 #### 이 책은 java.lang, java.util, java.io, java.util.concurrent, java.util.function 같은 하위 패키지를 효과적으로 사용하게끔 구성되었다.
 ---
