Type : 관심있는 책 등록 본문 : 이펙티브 자바 , 토비의 스프링 1권/2권 ->책 제목에 링크달기 ->들어가기 작성 꼬릿말 : 2021.10.04

--- a/Efective_Java/1장_들어가기/1_들어가기.md
+++ b/Efective_Java/1장_들어가기/1_들어가기.md
@@ -35,6 +35,7 @@
 ###### Java 메모리 공간은 크게 Static, Heap, Stack 영역으로 나뉘고,  
 ###### Static(static 데이터) 영역의 데이터는 프로그램의 시작과 종료될 때까지 메모리에 남아있게 된다.
 ###### Stack (기본자료형, 지역변수) 영역의 데이터는 호출될 때 메모리에 할당되고 종료되면 메모리에서 해제된다.
+###### 자바의 기본형은 8가지 (boolean,byte = 1byte) (short,char = 2byte) (int,float = 4byte) (long,double = 8byte) 이다.
 ###### Stack 영역은 LIFO(Last In First Out) 구조를 갖고 변수에 새로운 데이터가 할당되면 이전 데이터는 삭제된다.
 ###### Heap 메모리 영역은 가비지컬렉션의 대상 영역이다.
 ---
