Type : 이팩티브 자바 본문 : 어제 못한 부분인 '아이템2 생성자에 매개변수가 많다면 빌더를 고려하라' 정리 꼬릿말 : 2021.10.08

--- a/Efective_Java/2장_객체_생성과_파괴/2_생성자에_매개변수가_많다면_빌더를_고려하라.md
+++ b/Efective_Java/2장_객체_생성과_파괴/2_생성자에_매개변수가_많다면_빌더를_고려하라.md
@@ -146,9 +146,223 @@ NutritionFacts cocaCola = new NutritionFacts.Builder(240,8)
                                 .build();
 ```
 ### 빌더 패턴은 코드의 가독성도 좋고 불변클래스로 안정성을 높일 수 있다.
-
-
+### 빌더 패턴과 자바 빈즈 패턴의 가장 큰 차이점은 불변성에 있다.
+### 실수, 혹은 악의적인 목적으로 setter 메서드를 통해 유효하지 않은 값이나 null값,혹은 정확하지 않은 값이 들어가는것을 방지할 수 있다.
+### 당연하지만, 빌더 패턴 사용시에는 setter 메서드를 사용하면 안된다.
 
 #### 참고 블로그
 ###### [Builder Pattern(빌더 패턴 by Effective Java)](https://velog.io/@hero6027/Builder-Pattern%EB%B9%8C%EB%8D%94-%ED%8C%A8%ED%84%B4-by-Effective-Java)
 ###### [이펙티브 자바 아이템 2. 생성자에 매개변수가 많다면 빌더를 고려하라](https://velog.io/@lychee/%EC%9D%B4%ED%8E%99%ED%8B%B0%EB%B8%8C-%EC%9E%90%EB%B0%94-%EC%95%84%EC%9D%B4%ED%85%9C-2.-%EC%83%9D%EC%84%B1%EC%9E%90%EC%97%90-%EB%A7%A4%EA%B0%9C%EB%B3%80%EC%88%98%EA%B0%80-%EB%A7%8E%EB%8B%A4%EB%A9%B4-%EB%B9%8C%EB%8D%94%EB%A5%BC-%EA%B3%A0%EB%A0%A4%ED%95%98%EB%9D%BC#-%EC%83%9D%EC%84%B1%EC%9E%90%EC%99%80-%EC%A0%95%EC%A0%81-%ED%8C%A9%ED%84%B0%EB%A6%AC-%EB%A9%94%EC%84%9C%EB%93%9C%EC%9D%98-%EC%A0%9C%EC%95%BD)
+
+---
+
+### 빌더 패턴은 계층적으로 설계된 클래스와 함께 쓰기에 좋다.
+## 계층적으로 설계된 Builder 패턴
+1. 각 계층의 클래스에 관련 빌더를 멤버로 정의한다.
+2. 추상 클래스는 추상 빌더를, 구체 클래스는 구체 빌더를 갖게 한다.
+
+```java
+public abstract class Pizza {
+    public enum Topping { HAM, MUSHROOM, ONION, PEPPER, SAUSAGE }
+    final Set<Topping> toppings;
+    
+    abstract static class Builder<T extends Builder<T>> {
+        EnumSet<Topping> topping = EnumSet.noneOf(Topping.class);
+
+        public T addTopping(Topping topping) {
+            topping.add(Objects.requireNonNull(topping));
+            return self();
+        }
+        
+        abstract Pizza build();
+        // 하위 클래스는 이 메서드를 재정의하여 , "this" 를 반환하도록 해야 한다.
+        protected abstract T self();
+    }
+
+    Pizza(Builder<?> builder) {
+        toppings = builder.topping.clone();
+    }
+}
+```
+#### Pizza.Builder 클래스는 재귀적 타입 한정을 이용하는 제네릭 타입이다.
+#### 여기에 추상 메서드인 self 를 더해 하위 클래스에서는 형변환하지 않고도 메서드 연쇄를 지원할 수 있다.
+#### self 타입이 없는 자바를 위한 이 우회 방법을 시뮬레이트한 셀프 타입(simulated self-type) 관용구라 한다.
+```java
+public class NyPizza extends Pizza {
+    public enum Size { SMALL, MEDIUM, LARGE }
+
+    private final Size size;
+    
+    public static class Builder extends Pizza.Builder<Bulder> {
+        private final Size size;
+
+        public Builder(Size size) {
+            this.size = Objects.requireNonNull(size);
+        }
+        @Override public NyPizza build() {
+            return new NyPizza(this);
+        }
+        @Override protected Builder self() {
+            return this;
+        }
+    }
+
+    private NyPizza(Builder builder) {
+        super(builder);
+        size = builder.size;
+    }
+}
+
+public class Calzone extends Pizza {
+    private final boolean sauceInside;
+    public static class Builder extends Pizza.Builder<Builder> {
+        private boolean sauceInside = false; // 기본값
+        public Builder sauceInside() {
+            sauceInside = true;
+            return this;
+        }
+        @Override public Calzone build() {
+            return new Calzone(this);
+        }
+        @Override protected Builder self() {
+            return this;
+        }
+    }
+
+    private Calzone(Builder builder) {
+        super(builder);
+        sauceInside = builder.sauceInside;
+    }
+}
+```
+
+#### Pizza 의 하위 클래스가 2개 있다. 하나는 일반적인 뉴옥 피자이고, 다른 하나는 칼초네(calzone) 피자다.
+#### 뉴옥 피자는 크기(size) 매개변수를 필수로 받고, 칼초네 피자는 소스를 안에 넣을지 선택(sauceInside) 하는 매개변수를 필수로 받는다.
+#### 하위 클래스의 메서드가 상위 클래스의 메서드가 정의한 반환 타입이 아닌, 그 하위 타입을 반환하는 기능을 공변반환 타이핑(convariant return typing) 이라 한다.
+#### 이 기능을 이용하면 클라이언트가 형변환에 신경 쓰지 않고도 빌더를 사용할 수 있다.
+
+#### 다음은 클라이언트에서 계층적 빌더를 호출하는 예이다.
+```java
+NyPizza pizza = new NyPizza
+        .Builder(SMALL)
+        .addTopping(SAUSAGE)
+        .addTopping(ONION)
+        .build();
+Calzone calzone = new Calzone
+        .Builder()
+        .addTopping(HAM)
+        .sauceInside()
+        .build();
+```
+
+### 빌더 패턴은 매개변수가 4개 이상은 되어야 값어치를 한다.
+### 하지만 API 는 시간이 지날수록 매개변수가 많아지는 경향이 있음을 명심하고, 애초에 빌더로 시작하는 편이 나을 때가 많다.
+
+#### 참고 블로그
+#### [이펙티브 자바 아이템 2. 생성자에 매개변수가 많다면 빌더를 고려하라](https://velog.io/@lychee/%EC%9D%B4%ED%8E%99%ED%8B%B0%EB%B8%8C-%EC%9E%90%EB%B0%94-%EC%95%84%EC%9D%B4%ED%85%9C-2.-%EC%83%9D%EC%84%B1%EC%9E%90%EC%97%90-%EB%A7%A4%EA%B0%9C%EB%B3%80%EC%88%98%EA%B0%80-%EB%A7%8E%EB%8B%A4%EB%A9%B4-%EB%B9%8C%EB%8D%94%EB%A5%BC-%EA%B3%A0%EB%A0%A4%ED%95%98%EB%9D%BC)
+
+---
+
+### 여기까지 빌더 패턴을 알아보았다. 사실 계층적 설계 빌더 부터는 아직 완벽히 이해가 되진 않는다.
+### 그러나 이해를 하기 위해 EnumSet , Objects.requireNonNull() , Supplier<T> 를 찾아보았고 아래와 같다.
+
+## Enum
+### Enum 은 클래스 이다. 또한 내부적으로  java.lang.enum 을 상속받고 있기에 따로 상속을 받지 못한다.
+### EnumSet 은 먼저 allOf() 로 모든 요소를 포함하는 EnumSet 을 만들 수 있다.
+```java
+public enum Color {
+    RED, YELLOW, GREEN, BLUE, BLACK, WHITE
+}
+public static void main(String[] args) {
+    EnumSet<Color> set = EnumSet.allOf(Color.class);
+    set.forEach(System.out::println);
+}
+```
+#### 출력값은 : RED YELLOW GREEN BLUE BLACK WHITE 이다.
+
+### noneOf() 를 사용하면 빈 Color 컬렉션을 갖는 EnmSet 을 만들 수 있다.
+```java
+EnumSet<Color> set = EnumSet.noneOf(Color.class);
+```
+
+### of()를 사용하면, 들어갈 요소를 직접 입력하여 EnumSet을 생성할 수 있다.
+```java
+EnumSet<Color> set = EnumSet.of(Color.YELLOW, Color.BLUE;
+```
+### complementOf()를사용하면, 원하는 요소를 제거하고 EnumSet을 생성할 수 있다.
+```java
+EnumSet<Color> set = EnumSet.complementOf(EnumSet.of(Color.BLACK,Color.BLUE));
+set.forEach(System.out::println);
+```
+#### 출력값은 : RED YELLOW GREEN WHITE
+
+### copyOf()를 사용하면 다른 EnumSet의 모든 요소를 복사하여 EnumSet을 만들 수 있다.
+```java
+EnumSet.copyOf(EnumSet.of(Color.BLACK, Color.WHITE));
+```
+### 그 밖에도 add() , contains() , remove() 로 생성된 EnumSet 을 다룰 수 있다.
+
+### EnumSet 의 장점은
+### EumSet 의 모든 메서드는 산술 비트 연산을 사용하여 빠르다.
+### EnumSet은 비트 벡터의 특성상 더 작은 메모리를 사용한다.
+
+#### 참고 블로그
+#### [Java Enum, 자바의 열거타입을 알아보자](https://scshim.tistory.com/253)
+
+---
+
+### Object.requireNonNull() 은 non-null을 표시하는 역할을 한다. 내부로직은 아래와 같다.
+```java
+public static <T> T requireNonNull(T obj) {
+    if (obj == null)
+        throw new NullPointerException();
+    return obj;
+}
+```
+### null 이 들어오면 NullPointerException() 을 발생시킨다.
+### 당연한 결과를 쓰는 이유는 크게 명시성(explicity) , 빠른실패(fail fast) 라고 할 수 있다.
+### Object.requireNonNull() 를 사용한 예시를 보면
+```java
+public class A {
+	String name;
+}
+public class B {
+    A a;
+
+    public B(A a) {
+        this.a = Objects.requireNonNull(a);
+    }
+    
+    class C {
+        A a;
+        public C(A a) {
+            this.a = a;
+        }
+    }
+    public static void main(String[] args) {
+        A a = null;
+        B b = new B(a); // 생성 시점에 바로 에러가 난다.
+        C c = new C(a);
+        c.getA(); // 사용시점에 에러가 난다. 이는 시스템이 복잡해 질 수록 장애를 발견하기 어렵게 만들 수 있다.
+    }
+}
+```
+### Object.requireNonNull() 의 기타 장점은
+- 디버깅이 용이해지고 안정성이 높아 진다 할 수 있다.
+- 에러 발생의 일관성을 높일 수 있다.
+- NullPointerException 을 명시적으로 던지는 것이 JVM 이 발견해서 발생시키는 것 보다 성능상의 이점이 있다고 한다.
+
+### Optional 과의 차이점은
+- Optional은 null일지도 모르는 값을 처리하는데 초점이 가 있고, requireNonNull은 해당 참조가 null일 경우 즉시 발생시키는 것이 목적이다.
+
+#### 참고 블로그
+#### [Objects.requireNonNull()](https://velog.io/@rockpago/Objects.requireNonNull)
+
+---
+
+### Supplier<T> 을 특정 타입을 반환한다.
+### Supplier<T> 인터페이스는 추상 메서드 get()을 통해 Lazy Evaluation 이 가능하고 이는 성능상의 이점을 준다.
+
+#### 참고 영상
+#### [케빈TV](https://www.youtube.com/watch?v=mu9XfJofm8U&list=PLRIMoAKN8c6O8_VHOyBOhzBCeN7ShyJ27)
+#### [Java/자바 - Supplier<T> interface](https://m.blog.naver.com/zzang9ha/222087025042)
