--- a/Efective_Java/2장_객체_생성과_파괴/2_생성자에_매개변수가_많다면_빌더를_고려하라.md
+++ b/Efective_Java/2장_객체_생성과_파괴/2_생성자에_매개변수가_많다면_빌더를_고려하라.md
@@ -258,7 +258,7 @@ Calzone calzone = new Calzone
 ### 빌더 패턴은 매개변수가 4개 이상은 되어야 값어치를 한다.
 ### 하지만 API 는 시간이 지날수록 매개변수가 많아지는 경향이 있음을 명심하고, 애초에 빌더로 시작하는 편이 나을 때가 많다.
 
-#### 참고 블로그
+#### 참고 블로그 :
 #### [이펙티브 자바 아이템 2. 생성자에 매개변수가 많다면 빌더를 고려하라](https://velog.io/@lychee/%EC%9D%B4%ED%8E%99%ED%8B%B0%EB%B8%8C-%EC%9E%90%EB%B0%94-%EC%95%84%EC%9D%B4%ED%85%9C-2.-%EC%83%9D%EC%84%B1%EC%9E%90%EC%97%90-%EB%A7%A4%EA%B0%9C%EB%B3%80%EC%88%98%EA%B0%80-%EB%A7%8E%EB%8B%A4%EB%A9%B4-%EB%B9%8C%EB%8D%94%EB%A5%BC-%EA%B3%A0%EB%A0%A4%ED%95%98%EB%9D%BC)
 
 ---
@@ -306,7 +306,7 @@ EnumSet.copyOf(EnumSet.of(Color.BLACK, Color.WHITE));
 ### EumSet 의 모든 메서드는 산술 비트 연산을 사용하여 빠르다.
 ### EnumSet은 비트 벡터의 특성상 더 작은 메모리를 사용한다.
 
-#### 참고 블로그
+#### 참고 블로그 :
 #### [Java Enum, 자바의 열거타입을 알아보자](https://scshim.tistory.com/253)
 
 ---
@@ -355,7 +355,7 @@ public class B {
 ### Optional 과의 차이점은
 - Optional은 null일지도 모르는 값을 처리하는데 초점이 가 있고, requireNonNull은 해당 참조가 null일 경우 즉시 발생시키는 것이 목적이다.
 
-#### 참고 블로그
+#### 참고 블로그 :
 #### [Objects.requireNonNull()](https://velog.io/@rockpago/Objects.requireNonNull)
 
 ---
@@ -363,6 +363,7 @@ public class B {
 ### Supplier<T> 을 특정 타입을 반환한다.
 ### Supplier<T> 인터페이스는 추상 메서드 get()을 통해 Lazy Evaluation 이 가능하고 이는 성능상의 이점을 준다.
 
-#### 참고 영상
+#### 참고 영상 :
 #### [케빈TV](https://www.youtube.com/watch?v=mu9XfJofm8U&list=PLRIMoAKN8c6O8_VHOyBOhzBCeN7ShyJ27)
+#### 참고 블로그 :
 #### [Java/자바 - Supplier<T> interface](https://m.blog.naver.com/zzang9ha/222087025042)
