Type : 토비의 스프링 Vol1 본문 : 1-3 DAO의 분리 중 1-3-1 ~ 1-3-2 까지 정리 꼬릿말 : 2021.10.09

--- a/Efective_Java/2장_객체_생성과_파괴/1_생성자_대신_정적_책터리_메서드를_고려하라.md
+++ b/Efective_Java/2장_객체_생성과_파괴/1_생성자_대신_정적_책터리_메서드를_고려하라.md
@@ -1,6 +1,6 @@
 ## 2.객체 생성과 파괴
 
-### 1.생성자 대신 정적 팩터리 메서드를 고려하라 ex) 대표적으로 java.util.Collections
+### [1.생성자 대신 정적 팩터리 메서드를 고려하라 ex) 대표적으로 java.util.Collections]()
 #### 정적 팩터리 메서드란
 
 ```java
