--- a/Efective_Java/2장_객체_생성과_파괴/2_생성자에_매개변수가_많다면_빌더를_고려하라.md
+++ b/Efective_Java/2장_객체_생성과_파괴/2_생성자에_매개변수가_많다면_빌더를_고려하라.md
@@ -1,6 +1,6 @@
 ## 2.객체 생성과 파괴
 
-### 2.생성자에 매개변수가 많다면 빌더를 고려하라
+### [2.생성자에 매개변수가 많다면 빌더를 고려하라]()
 #### 실제로 빌더패턴을 Lombok 에너테이션 @Builder 을 활용해 많이 쓰고 있다. 이번장에서는 이러한 빌더패턴에 대해 알아보자
 
 ### 매개변수를 자유롭게 적용 할 수 있는 클래스용 생성자 혹은 정적 팩터리는 크게 3가지가 있다.
