Type : 인프런 자바 알고리즘 본문 : 문자열 index.md 추가 꼬릿말 : 2021.10.09

--- a/인프런_자바(Java)_알고리즘_문제풀이_코딩테스트_대비/1_문자열/2_대소문자변환.md
+++ b/인프런_자바(Java)_알고리즘_문제풀이_코딩테스트_대비/1_문자열/2_대소문자변환.md
@@ -2,8 +2,8 @@
 ---
 ### Character.isLowerCase(x) // x가 소문자인지 확인
 ### Character.isUpperCase(x) // x가 대문자인지 확인
-### 아스키 코드로는 대문자는 65~90, 소문자는 97~122 딱 32만큼 차이난다.
-### 소문자인 x 이면 x-32 하면 대문자가 되고 이는 형변환을 해줘야 문자로 바뀐다. (char)(x-32);
+### 아스키 코드로는 대문자는 65 ~ 90, 소문자는 97 ~ 122 딱 32만큼 차이난다.
+### 소문자인 x 이면 x - 32 하면 대문자가 되고 이는 형변환을 해줘야 문자로 바뀐다. (char)(x-32);
 ---
 ### 문제 풀이
 ```java
