--- a/Efective_Java/1장_들어가기/1_들어가기.md
+++ b/Efective_Java/1장_들어가기/1_들어가기.md
@@ -3,7 +3,6 @@
 #### 이 책은 java.lang, java.util, java.io, java.util.concurrent, java.util.function 같은 하위 패키지를 효과적으로 사용하게끔 구성되었다.
 ---
 #### 이 책은 총 90개의 아이템을 담았고, 주제별로 11개 장으로 묶었다.
-아이템들은 서로 독립적이어서 책을 처음부터 볼 필요는 없다. 마음이 이끄는 대로 읽어도 좋다.
 
 |기능                   |아이템 번호|도입된 자바 버전|
 |:---------------------|:-------:|------------:|
@@ -34,7 +33,7 @@
 - 클래스의 멤버로는 필드, 메서드, 멤버 클래스, 멤버 인터페이스가 있다.
 ###### Java 메모리 공간은 크게 Static, Heap, Stack 영역으로 나뉘고,  
 ###### Static(static 데이터) 영역의 데이터는 프로그램의 시작과 종료될 때까지 메모리에 남아있게 된다.(공유된다.)
-###### Stack (기본자료형, 지역변수) 영역의 데이터는 호출될 때 메모리에 할당되고 종료되면 메모리에서 해제된다.
+###### Stack (기본자료형, 지역변수) 영역의 데이터는 호출될 때 메모리에 할당되고 호출이 종료되면 메모리에서 해제된다.
 ###### 자바의 기본형은 8가지 (boolean,byte = 1byte) (short,char = 2byte) (int,float = 4byte) (long,double = 8byte) 이다.
 ###### Stack 영역은 LIFO(Last In First Out) 구조를 갖고 변수에 새로운 데이터가 할당되면 이전 데이터는 삭제된다.
 ###### Heap 메모리 영역은 가비지컬렉션의 대상 영역이다.
