--- a/Efective_Java/2장_객체_생성과_파괴/1_생성자_대신_정적_책터리_메서드를_고려하라.md
+++ b/Efective_Java/2장_객체_생성과_파괴/1_생성자_대신_정적_책터리_메서드를_고려하라.md
@@ -16,7 +16,7 @@
 #####   -----> 플라이 웨이트란 동일하거나 유사한 객체들 사이에 가능한 많은 데이터를 서로 공유하여 사용하도록 하여 메모리 사용량을 최소화하는 디자인 패턴이다.
 ##### 3.반환타입의 하위 타입 객체를 반환할 수 있는 능력이 있다. -> 이것은 엄청난 유연성을 가진다!
 ##### 4.입력 매개변수에 따라 매번 다른 클래스의 객체를 반환할 수 있다. (3번처럼 반환타입의 하위타입이면 어떤 클래스의 객체든 반환 가능하다.)
-##### 5. 다섯 번째, 정적 책처리 메서드를 작성하는 시점에는 반환할 객체의 클래스가 존재하지 않아도 된다. 
+##### 5. 다섯 번째, 정적 팩터리 메서드를 작성하는 시점에는 반환할 객체의 클래스가 존재하지 않아도 된다. 
 #####   --> 이는 프레임워크를 만드는 근간이 되며, 구현체로부터 분리해준다. 대표적인 예시로 JDBC 가 있다.
 #######   ----> 구현체의 동작 정의(서비스 인터페이스)->Connection
 #######   ----> 구현체 등록(제공자 등록API)->DriverManager.registerDriver
