제목 : 인프런 김영한님 스프링 핵심원리 강의 본문 : 이미지 깨짐현상 수정 꼬릿말 : 2021.10.17

--- a/인프런_스프링_핵심_원리/5_실습.md
+++ b/인프런_스프링_핵심_원리/5_실습.md
@@ -156,6 +156,7 @@ ex) ApplicationContextExtendsFindTest.jav
 - 애플리케이션 이벤트
 - 편리한 리소스 조회 룰 상속 받는다.
 <img src='ApplicationContext.PNG' width="450px"/>
+
 - BeanFactory 를 직접 사용할 일은 거의 없다. 부가기능이 포함된 ApplicationContext 를 사용한다.
 
 
@@ -163,6 +164,7 @@ ex) ApplicationContextExtendsFindTest.jav
 - 스프링 컨테이너는 다양한 형식의 설정 정보를 받아드릴 수 있게 유연하게 설계되어있다.
 - 자바 코드 , XML , Groovy 등
 <img src='다양한설정형식.PNG' width="450px"/>
+
 - XML 활요 ex) XmlAppContext.java , appConfig.xml
 
 
@@ -170,6 +172,7 @@ ex) ApplicationContextExtendsFindTest.jav
 - BeanDefinition 을 설정 메타정보라 하고 @Bean , <bean> 당 하나씩 메타정보가 생성된다.
 - 스프링 컨테이너는 이 메타정보를 기반으로 스프링 빈을 생성한다. 즉 스프링 컨테이너는 추상화인 BeanDefinition을 의존한다.
 <img src='BeanDefinition.PNG' width="450px"/>
+
 - BeanClassName
 - factoryBeanName
 - factoryMethodName
@@ -179,7 +182,7 @@ ex) ApplicationContextExtendsFindTest.jav
 - initMethodName
 - DestroyMethodName
 - Constructor arguments, Properties
-- ***추가적으로 ApplicationContext 로는 getBeanDefinition 을 사용할 수 없다. AnnotationConfigApplicationContext 처럼 구현체로 사용할 수있다.
+- 추가적으로 ApplicationContext 로는 getBeanDefinition 을 사용할 수 없다. AnnotationConfigApplicationContext 처럼 구현체로 사용할 수있다.
 - 스프링 빈을 만드는 방법으로는 두가지 방식이있는데  직접적으로 빈을 등록하는 방법, 팩터리 빈을 통해서 등록하는 방식이다.
 - xml 방식은 직접 빈을 등록하는 방식으로 GenericXmlApplicationContext 으로 beanDefinition을 꺼내면 클래스는 무엇인지 볼 수 있다.
 - @에노테이션 방식은 우회해서 등록하는 팩터리 메서드 방식으로 AnnotationConfigApplicationContext 으로 beanDefinition을 꺼내면 클래스는 null이다.
