--- a/인프런_스프링_핵심_원리/1_스프링이란.md
+++ b/인프런_스프링_핵심_원리/1_스프링이란.md
@@ -14,7 +14,7 @@
 ---
 ### 스프링 프레임워크
 - 핵심기술 : 스프링 DI 컨테이너, AOP, 이벤트, 기타
-- 웹기술 : 스프링 MVC, 스르링 WebFlux
+- 웹기술 : 스프링 MVC, 스프링 WebFlux
 - 데이터접근기술 : 트랜젝션, JDBC, ORM 지원, XML 지원
 - 기술통합 : 캐시, 이메일, 원격접근, 스케줄링
 - 테스트 : 스프링 기반 테스트 지원
