--- a/Efective_Java/2장_객체_생성과_파괴/1_생성자_대신_정적_책터리_메서드를_고려하라.md
+++ b/Efective_Java/2장_객체_생성과_파괴/1_생성자_대신_정적_책터리_메서드를_고려하라.md
@@ -18,10 +18,10 @@
 ##### 4.입력 매개변수에 따라 매번 다른 클래스의 객체를 반환할 수 있다. (3번처럼 반환타입의 하위타입이면 어떤 클래스의 객체든 반환 가능하다.)
 ##### 5. 다섯 번째, 정적 팩터리 메서드를 작성하는 시점에는 반환할 객체의 클래스가 존재하지 않아도 된다. 
 #####   --> 이는 프레임워크를 만드는 근간이 되며, 구현체로부터 분리해준다. 대표적인 예시로 JDBC 가 있다.
-#######   ----> 구현체의 동작 정의(서비스 인터페이스)->Connection
-#######   ----> 구현체 등록(제공자 등록API)->DriverManager.registerDriver
-#######   ----> 서비스의 인스턴스를 얻기(서비스 접근API)->DriverManager.getConnection
-#######   ----> 서비스 제공자 인터페이스->Driver
+#######   1)구현체의 동작 정의(서비스 인터페이스)->Connection
+#######   2)구현체 등록(제공자 등록API)->DriverManager.registerDriver
+#######   3)서비스의 인스턴스를 얻기(서비스 접근API)->DriverManager.getConnection
+#######   4)서비스 제공자 인터페이스->Driver
 
 #### 이제 단점을 알아보자
 ##### 1.상속을 하려면 public 이나 protected 생성자가 필요하니 정적 팩터리 메서드만 제공하면 하위 클래스를 만들 수 없다.
