제목 : 인프런 실전! 스프링 데이터 JPA 본문 : 챕터 스프링 데이터 JPA 까지 정리 꼬릿말 : 2021.10.30

--- a/인프런_JPA/4_공통_인터페이스_기능.md
+++ b/인프런_JPA/4_공통_인터페이스_기능.md
@@ -4,6 +4,10 @@
 
 ### 순수 JPA 기반 리포지토리 만들기
 #### JPA 의 UPDATE 는 Transaction 마지막에 이루어지는 변경감지(더티체킹) 을 통해서 하는게 정석이다.
+#### 권장하는 방법도 save() 를통한 merge()보다는 변경감지를 통한 더티체킹 업데이트를 권장한다!
+#### merge()같은경우는 영속상태에 있던 데이터가 특정이유로 벗어났을 경우 다시 불러오기 위해 쓰는것
+#### 이때 찾아 오는 쿼리가 날라감으로 업데이트는 꼭 되도록 변경감지(더티체킹) 으로 업데이트하도록하자
+#### 데이터의 저장또한 persist()로 꼭 하도록!!!
 
 ---
 
