--- a/인프런_JPA/5_쿼리_메소드_기능.md
+++ b/인프런_JPA/5_쿼리_메소드_기능.md
@@ -66,4 +66,141 @@ public class MemberDto {
     @Query("select new study.datajpa.dto.MemberDto(m.id, m.username, t.name) from Member m join m.team t")
     List<MemberDto> findMemberDto();
 ```
-#### 이런식으로 사용
+#### 이런식으로 사용 마치 생성자로 초기화하듯이 사용(new Operation)
+
+---
+
+### 파라미터 바인딩 (가급적 이름기반으로 사용할 것!)
+#### 위치 기반 : "select m from Member m where m.username = ?1"
+#### 이름 기반 : "select m from Member m where m.username = :name"
+
+### 컬렉션 파라미터 바인딩(in 절로 여러개, 자주씀)
+```java
+@Query("select m from Member m where m.username in :names")
+List<Member> findByNames(@Param("names") Collection<String> names)
+```
+
+---
+
+### 반환 타입
+#### 컬렉션, 단건, Optional 단건 등등 가능
+### JPA 는 Collection 반환시에 null 이면은 빈 컬렉션 반환한다!
+### 때문에 if(List == null) 이런코드 들어가는것은 무용지물 안좋은 코드이다!
+### 즉 JPA 가 반환하는 컬렉션은 Null 이 아님을 보장한다.
+#### 단건 조회는 순수 JPA 는 Null 일 경우 NoResultException 을 터트리지만
+#### data JPA 는 단건 조회 시에 Null 일 경우  순수한 Null 을 반환
+#### 하지만 이렇게 경우의 수가 있지만, 단건은 그냥 Optional 을 쓰는 것이 좋다!!!
+#### 단건조회시 여러개 결과가 나온다면 JPA 는 NonUniqueResultException 을 터뜨리고 springDataJpa 는 이것을 IncorrectResultDataAccessException(SpringFramework 의 예외) 으로 바꿔서 터뜨린다. -> 때문에 사용하는 클라이언트는 바꿀 필요가없다.
+
+#### [그외 타입들](https://docs.spring.io/spring-data/jpa/docs/current/reference/html/#repository-query-return-types)
+
+---
+
+### 순수 JPA 페이징과 정렬
+#### limit , offset 활용 - 첫 페이지 offset = 0 , limit = 10 , 두번째 페이지 offset = 10, limit = 10
+
+---
+
+## 스프링 데이터 JPA 페이징과 정렬
+---
+### 페이징과 정렬 파라미터 
+#### org.springframework.data.domain.Sort : 정렬기능
+#### org.springframework.data.domain.Pageable : 페이지 기능(내부에 'Sort' 포함)
+
+### 특별한 반환 타입
+#### org.springframework.data.domain.Page : 추가 count 쿼리 결과를 포함하는 페이징
+#### org.springframework.data.domain.Slice : 추가 count 쿼리 없이 다음 페이지만 확인 가능(내부적으로 limit + 1 조회)
+#### 'List'(자바 컬렉션) : 추가 count 쿼리 없이 결과만 반환
+```java
+   /**
+     * Spring Data Jpa 페이지 처리
+     * Page<Member> findByAge(int age, Pageable pageable);
+     */
+    @Test
+    public void paging() {
+        // given
+        memberRepository.save(new Member("member1", 10));
+        memberRepository.save(new Member("member2", 10));
+        memberRepository.save(new Member("member3", 10));
+        memberRepository.save(new Member("member4", 10));
+        memberRepository.save(new Member("member5", 10));
+
+        int age = 10;
+        // 주의할점은 SpringDataJpa Page 는 인덱스가 0 부터 시작이다
+        PageRequest pageRequest = PageRequest.of(0, 3, Sort.by(Sort.Direction.DESC, "username"));
+
+        //when
+        Page<Member> page = memberRepository.findByAge(age, pageRequest);
+
+        // then -> page 내에 내부 content 꺼내고 싶다면 getContent() 로 꺼냄
+        List<Member> content = page.getContent();
+        long totalElements = page.getTotalElements(); // 토탈 카운트
+        for (Member member : content) {
+            System.out.println("member = " + member);
+        }
+        System.out.println("totalElements = " + totalElements);
+
+        assertThat(content.size()).isEqualTo(3); // 가져온 갯수
+        assertThat(page.getTotalElements()).isEqualTo(5); // DB에 있는 총 갯수
+        assertThat(page.getNumber()).isEqualTo(0); // Page 번호
+        assertThat(page.getTotalPages()).isEqualTo(2); // 전체 페이지 갯수
+        assertThat(page.isFirst()).isTrue(); // 첫페이지인지
+        assertThat(page.hasNext()).isTrue(); // 다음 페이지있는지
+    }
+```
+#### Page<Member> findByUsername(String name, Pageable pageable); //count 쿼리 사용
+#### Slice<Member> findByUsername(String name, Pageable pageable); //count 쿼리 사용 안함
+#### List<Member> findByUsername(String name, Pageable pageable); //count 쿼리 사용 안함
+#### List<Member> findByUsername(String name, Sort sort);
+
+### Page 는 1부터 시작이 아니라 0부터
+### 데이터가 많을시 카운트 쿼리는 따로 쓰는게 좋다.
+```java
+@Query(value = “select m from Member m”,
+ countQuery = “select count(m.username) from Member m”)
+Page<Member> findMemberAllCountBy(Pageable pageable);
+```
+---
+
+### 벌크성 수정 쿼리 (일괄적으로 많은 업데이트쿼리를 날릴때) 
+#### 그런데 JPA 에서 이런 벌크성 Update 는 조심해야한다. 
+#### JPA 는 영속성 컨텍스트에서 관리를 하는데 이거를 무시하고(영속성 컨텍스트 모르게) 벌크연산을 떼리는 것이어서
+#### 영속겅 컨텍스트와 DB 와의 동기화에 문제가 생길 수 있다.
+### 따라서 벌크연산이후에는 영속성 컨텍스트를 초기화(날려버려야함)해야함
+### 또는 @Modify(clearAutomatically = true) Modify 에 옵션을 준다.
+
+##### 추가적으로 JPA 기본 동작이 JPQL 쿼리가 있으면 같은 Transactional 안에서 나중에 함께 날리는 것이 아닌 
+##### JPQL 쿼리날리기전에 그전 쿼리들은 flush 하고 JPQL 쿼리를 날린다.
+
+---
+
+### @EntityGraph (Fetch Join 의 해결)
+#### fetch join 사용시 Member 와 연관된 team 을 한번에 다 불러옴
+#### join 뒤에 fetch 를 붙여 사용
+```java
+    @Query("select m from Member m left join fetch m.team")
+    List<Member> findMemberFetchJoin();
+```
+#### 즉 연관관계가 있는 객체를 한번에 가져오게 하는것이 fetch join
+#### 그러나 항상 jpql 을 적어주는것은 상당한 노력이 필요하다.
+#### 때문에 spring data jpa 는 @EntityGraph 를 제공한다.
+```java
+    @Override
+    @EntityGraph(attributePaths = {"team"})
+    List<Member> findAll();
+```
+
+---
+
+### JPA Hint & Lock
+#### JPA Hint 란 Jpa 쿼리를 날릴때 hibernate(구현체) 가 제공하는 hint
+#### JPA Hint 는 진짜 쿼리가 복잡하고, 성능최적화가 완전필요한 경우 readOnly 로써 사용한다.
+
+#### JPA Lock 은 JPA 가 제공하는것으로 예시로 select for update 가 있다.
+#### 실시간 트래픽이 많은 곳에서는 Lock 을 안걸고 다른방법으로 해결하는 것을 권장
+#### 실시간 트래픽이 많지않고 돈을 맞추거나 하는것이 더 중요한 경우에는 사용해도됨
+
+---
+
+
+
