제목 : 인프런 실전! 스프링 데이터 JPA 완강 본문 : 챕터 스프링 데이터 JPA 까지 정리 완강 꼬릿말 : 2021.10.31

--- a/인프런_JPA/8_나머지_기능들.md
+++ b/인프런_JPA/8_나머지_기능들.md
@@ -1,4 +1,49 @@
-## 나머지 기능들
+## 나머지 기능들 (실무에서는 잘 쓰지는 않음)
 ---
 
-### Specifications ( 명세 )
+### Specifications ( 명세 
+#### JpaSpecificationExecutor 인터페이스 상속
+#### JPA Criteria 사용 -> 실무에서 안쓰는게 좋음 가독성 많이 떨어짐!
+#### JpaSpecificationExecutor<Member>
+### 실무에서는 JPA Criteria 안쓰고 QueryDSL 을 쓴다.
+
+---
+
+### Query By Example
+#### 새로나온 기능이라 한번 메뉴얼 봐보는 것도?!
+#### [메뉴얼](https://docs.spring.io/spring-data/jpa/docs/current/reference/html/#query-by-example)
+#### 하지만 이 기능도 join 이 inner join 만 가능하고 outer join 은 안된다...
+#### 실무에서 사용하기에는 매칭 조건이 너무 단순하고 LEFT 조인이 안됨
+#### 실무에서는 QueryDSL 을 사용하자!
+
+---
+
+### Projections
+#### 이 기능은 약간 도움이 될때가 있다!
+#### 엔티티 대신에 DTO 를 편리하게 조회할 때 사용
+#### 전체 엔티티가 아니라 만약 회원 이름만 딱 조회하고 싶을때
+#### join 이 들어가는 중첩구조상 최적화하기 힘듦
+
+---
+
+### 네이티브 쿼리
+#### 가급적 네이티브 쿼리는 사용하지 않는게 좋음, 정말 어쩔 수 없을 때 사용
+#### 최근에 나온 궁극의 방법 -> 스프링 데이터 Projections 활용
+#### 반환타입이 몇가지 지원이 안된다.
+- Object[]
+- Tuple
+- DTO(스프링 데이터 인터페이스 Projections 지원)
+#### JPQL 처럼 애플리케이션 로딩 시점에 문법 확인불가
+#### Sort 파라미터를 통한 정렬이 정상 동작하지 않을 수 있음(믿지 말고 직접 처리)
+#### 동적 쿼리 불가
+#### 따라서 네이티브쿼리보다는 이럴때는 JdbcTemplate 또는 myBatis 권장
+#### 최근에는 Projections 활용하면 조금은 낫다
+
+
+
+
+
+
+
+
+
