제목 : 인프런 스프링 핵심 원리 완강 본문 : 인프런 스프링 핵심 원리 완강 꼬릿말 : 2021.11.01

--- a/인프런_스프링_핵심_원리/5_실습.md
+++ b/인프런_스프링_핵심_원리/5_실습.md
@@ -484,3 +484,101 @@ public DiscountPolicy setDiscountPolicy(@Qualifier("mainDiscountPolicy")
 - 첫째, 인터페이스(initializingBean, DisposableBean)
 - 둘째, 설정 정보에 초기화 메서드, 종료 메서드 지정
 - 셋째, @PostConstruct, @PreDestroy 에너테이션 지원
+
+---
+2. 인터페이스 InitializingBean , DisposableBean
+- 인터페이스로 초기화와 소멸전 콜백 사용
+- 초기화 : InitializingBean 상속후 afterPropertiesSet() 메소드 구현 이는 의존관계 주입 끝나면 무엇을 할지
+- 소멸전 콜백 : DisposableBean 상속후 destroy() 구현
+- 초기하, 소멸 인터페이스의 단점 : 스프링 전용 인터페이스로 스프링에 의존적인 설계가 된다.
+- 초기하, 소멸 인터페이스의 단점 : 초기화,소멸 메서드의 이름을 변경할 수 없다.
+- 초기하, 소멸 인터페이스의 단점 : 내가 코드를 고칠 수 없는 외부 라이브러리에 적용할 수 없다.
+- 그래서 이러한 인터페이스를 사용하는것은 스프링 초기에 나온 방법으로 지금은 거의 사용하지 않는다.
+
+
+3. 빈 등록 초기화, 소멸 메서드 
+- @Bean(initMethod = "init", destroyMethod = "close") 사용
+- 장점 : 메서드 이름을 자유롭게 사용할 수 있다.
+- 스프링 빈이 스프링 코드에 의존하지 않는다.
+- 코드가 아니라 설정 정보를 사용하기 때문에 코드를 고칠 수 없는 외부 라이브러리에도 초기화, 종료 메서드를 적용할 수 있다.
+- 이때 destroyMethod 의 기본 설정이  inffered 즉 추론이다 이때 close 또는 shutdown 을 찾아 기본값으로 설정하므로
+- 만약 destroyMethod 를 따로 설정안하고 사용하고 싶지 않다면 destroyMethod = "" 공백으로 둔다
+- 최근에는 AutoClose 라는 것이 있는데 이는 따로 알아보자
+
+
+4. 애노테이션 @PostConstruct , @PreDestroy(사용은 ac.close())
+- 이방법으 제일 좋고, 최신 스프링에서도 이 방법을 권고하고 있다.
+- javax 에 있는 기능이라 스프링에 종속적인 기능이 아니다.
+- 즉 다른 컨테이너에서도 잘 동작한다.
+- 컴포넌트 스캔과도 잘어울린다.
+- 그러나 유일한 단점은 외부 라이브러리를 초기화, 종료하지 못한다.
+- 때문에 외부 라이브러리를 초기화, 종료하고 싶다면 그때만 @Bean(initMethod, destroyMethod) 사용하자
+
+---
+
+#### 빈 스코프
+1. 빈 스코프란?
+- 스코프는 빈이 존재할 수 있는 범위를 뜻한다.
+- 싱글톤 : 스프링의 기본 스코프, 스프링 컨테이너의 시작과 종료까지 유지되는 가장 넓은 범위
+- 프로토타입 : 스프링 컨테이너는 프로토타입 빈의 생성과 의존관계 주입까지만 관여하고 더는 관리하지 않는 매우 짧은 범위
+- 웹 관련 스코프
+- "request" : 웹 요청이 들어오고 나갈 때 까지
+- "session" : 웹 세션이 생성되고 종료될 때 까지 (주로 로그인)
+- "application" : 웹의 서블릿 컨텍스와 같은 범위로 유지되는 스코프
+- 등록 방법 @Scope("prototype")
+
+
+2. 프로토타입 스코프
+- 프로토타입 스코프를 스프링 컨테이너에 조회하면 스프링 컨테이너는 항상 새로운 인스턴스를 생성해서 반환한다.
+- 프로토타입 은 스프링 컨테이너가 요청시점에 생성과 의존관계를 주입하고 초기화 메서드까지 불러준뒤 반환하고 이후에 관리하지 않는다.
+- 그래서 프로토타입 은 @PreDestroy 같은 종료 메서드를 사용할 수 없다!
+- 만약 @Prototype 빈의 종료메소드를 호출해야한다면 직접 호출해 준다.
+
+
+3. 프로토타입 스코프 - 싱글톤 빈과 함께 사용시 문제점
+- 프로토타입 빈과 싱글톤 빈을 함께 사용하면 의도한대로 동작하지 않을 때가 있다.
+- 싱글톤 빈 안에 프로토타입 빈을 사용시에 문제가 된다. 싱글톤빈과 함께 프로토타입빈도 의존관계 주입받는 시점에 함께 주입받아 이미 생성되어있는 프로토타입을 쓰게 되므로
+- 이를 해결하기 위한 방법으로 일단 무식하게 ApplicationContext 를 직접 계속 만들어주는 로직으로 하는 방법도 있다.
+- 의존관계를 외부에서 주입 받는게 아니라 직접 필요한 의존관계를 찾는 것을 Dependency Lookup(DL) 의존관계조회(탐색) 이라한다.
+- 더 좋은 방법은 아래에서
+
+
+4. 프로토타입 스코프 - 싱글톤 빈과 함께 사용시 Provider 로 문제 해결
+- Spring 위에서 언급한 Dependency Lookup(DL) 을 대신해주는 ObjectFactory 또는 ObjectProvider 를 제공한다.
+- ObjectFactory 랑 ObjectProvider 이랑 같은 것이긴한데 ObjectFactory 를 ObjectProvider 가 상속받고있어서 ObjectProvider 가 좀더 기능이 많다.
+- 하지만 ObjectFactory 랑 ObjectProvider 둘다 스프링에 의존적이다.
+- 스프링에 의존적이지 않은 기능이 있는데 javax.inject.Provider 를 이용하면 된다.
+- 이 방법은 javax.inject:javax.inject:1 라이브러리를 gradle 에 추가해줘야 한다.
+- javax.inject:javax.inject:1 라이브러리를 추가해줘야하는것 외에는 심플하고 좋다.
+
+#### 그렇다면 prototype 을 언제 사용해야할까?
+- 매번 사용할 때 마다 의존관계 주입이 완료된 새로운 객체가 필요하면 사용하면 된다.
+- 그런데 실무에서 웹 애플리케이션을 개발해보면, 싱글톤 빈으로 대부분의 문제를 해결할 수 있기 때문에 프로토타입 빈을 직접적으로 사용하는 일은 매우 드물다.
+- ObjectProvider 는 DL 을 위한 편의 기능을 많이 제공해주고 스프링 외에 별도의 의존관계의 추가가 필요없다.
+- 그러나 만약에 스프링이 아닌 다른 컨테이너에서도 사용할 수 있어야 한다면 JSR330 Provider 인 javax.inject:javax.inject:1 를 사용한다.
+
+---
+
+#### 웹 스코프
+- 웹 환경에서만 동작한다.
+- 프로토타입과 다르게 스프링이 종료시점까지 관리한다. 따라서 종료 메서드가 호출된다.
+- "request" : HTTP 요청 하나가 들어오고 나갈 때 까지 유지되는 스코프, 각각의 HTTP 요청마다 별도의 빈 인스턴스가 생성되고, 관리된다.
+- "session" : HTTP Session 과 동일한 생명주기를 가지는 스코프
+- "application" : 서블릿 컨텍스트(ServletContext) 와 동일한 생명주기를 가지는 스코프
+- "websocket" : 웹 소켓과 동일한 생명주기를 가지는 스코프
+- spring boot web 라이브러리를 추가한다.
+- 스프링부트 웹 라이브러리가 없으면 AnnotationConfigApplicationContext 를 기반으로 애플리케이션을 구동한다.
+- 웹 라이브러리가 추가되면 웹과 관련된 추가 설정과 환경들이 필요하므로 AnnotationConfigServletWebServerApplicationContext 를 기반으로 애플리케이션을 구동한다.
+
+
+1. request 스코프 예제 만들기
+- 동시에 여러 HTTP 요청이 오면 정확히 어떤 요청이 남긴 로그인지 구분하기 어렵다.
+- 이럴때 사용하기 딱 좋은것이 바로 request 스코프이다.
+- request 스코프는 고객의 요청이 있을때 생성함으로 Provider 를 함께 사용해야한다. 안그러면 스프링컨테이너를 띄울때 오류가 난다.
+
+2. 스코프와 프록시
+- @Scope(value = "request", proxyMode = ScopedProxyMode.TARGET_CLASS)
+- 이렇게 proxyMode 를 쓰면 Provider 를 쓰지 않아도 된다.
+- 이때 proxyMode 대상이 class 이면 TARGET_CLASS 를 주면 되고, interface 이면 INTERFACES 를 선택해서 주면 된다.
+
+- 프록시 객체 덕분에 클라이언트는 마치 싱글톤 빈을 사용하듯이 편리하게 request scope 를 사용할 수 있다.
