제목 : 인프론 Vue 시작하기 완강 본문 : Vue 시작하기 완강 꼬릿말 : 2021.11.04

--- a/인프런_Vue시작하기/9_템플릿_문법-실전.md
+++ b/인프런_Vue시작하기/9_템플릿_문법-실전.md
@@ -6,4 +6,13 @@
 
 ### watch 속성 VS computed 속성
 #### watch 같은경우 상대적으로 무거운 로직들
+#### 왠만하면 computed 로 해결하는게 좋다
+#### [watch 와 computed](https://vuejs.org/v2/guide/computed.html#ad)
+
+---
+### computed 속성을 이용한 클래스 코드 작성 방법
+#### v-bind:class="computed" 이렇게 class 또한 computed 로 사용하는게 좋다.
+#### computed(){ return this.isError ? 'warning' : null; } 
+
+---
 
